# Porringer

./: .gitconfig  LICENSE.md  README.md  pyproject.toml
.github/workflows/: documentation-trigger.yml  python-check.yml  python-merge.yml  python-publish.yml
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
porringer/: __init__.py  api.py  resolver.py  schema.py
porringer/application/: click.py  version.py
porringer/backend/: __init__.py  builder.py  plugin.py  resolver.py  schema.py  self.py  version.py
porringer/backend/command/: __init__.py  plugin.py  self.py  version.py
porringer/console/: __init__.py  entry.py
porringer/core/: __init__.py  schema.py
porringer/core/plugin_schema/: __init__.py  environment.py
porringer/plugin/: __init__.py
porringer/plugin/pip/: __init__.py  plugin.py
porringer/plugin/pipx/: __init__.py  plugin.py
porringer/plugin/winget/: __init__.py  plugin.py
porringer/plugin_helper/: plugin.py  shared.py  tests.py  variants.py
porringer/plugin_helper/mock/: environment.py
porringer/plugins/pip/: plugin.py
porringer/plugins/pipx/: plugin.py
porringer/plugins/winget/: plugin.py
porringer/test/: plugin.py  shared.py  tests.py  variants.py
porringer/test/mock/: __init__.py  environment.py
porringer/test/pytest/: __init__.py  plugin.py  shared.py  tests.py  variants.py
porringer/utility/: __init__.py  exception.py  plugin.py  subprocess.py  utility.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/plugins/: __init__.py
tests/integration/plugins/pip/: __init__.py  test_environment.py
tests/integration/plugins/pipx/: __init__.py  test_environment.py
tests/integration/plugins/winget/: __init__.py  test_environment.py
tests/unit/: __init__.py  test_cli.py  test_command_plugin.py  test_command_self.py  test_plugin_schema.py
tests/unit/plugins/: __init__.py
tests/unit/plugins/pip/: __init__.py  test_environment.py
tests/unit/plugins/pipx/: __init__.py  test_environment.py
tests/unit/plugins/winget/: __init__.py  test_environment.py
